--- a/gui/navigation_bar/nav_bar.css
+++ b/gui/navigation_bar/nav_bar.css
@@ -4,15 +4,16 @@ ul.topnav {
     padding: 0;
     overflow: hidden;
     background-color: #333;
+    
 }
   
-ul.topnav li {float: left;}
+ul.topnav li {float: left;-webkit-app-region: none;}
   
 ul.topnav li a {
     display: block;
     color: white;
     text-align: center;
-    padding: 14px 16px;
+    padding: 8px 16px;
     text-decoration: none;
 }
   
@@ -25,4 +26,18 @@ ul.topnav li.right {float: right;}
 @media screen and (max-width: 600px) {
     ul.topnav li.right, 
     ul.topnav li {float: none;}
+}
+
+#minimize_button,#close_button,#maximize_button{
+    float: right;
+}
+
+
+.logo
+{
+    /* padding: 0px; */
+    width: 23px;
+    padding-top: 4px;
+    padding-left: 3px;
+    margin-right: 10px;
 }
