--- a/gui/terminal/terminal.css
+++ b/gui/terminal/terminal.css
@@ -4,5 +4,19 @@
    resize: both;
    overflow: scroll;
    width:100%;
-   height:250px;
+   height:100px;
+}
+
+
+#mysql_query_generator{
+   margin-top: 20px ;
+}
+
+#example-table
+{
+   margin-top: 70px;
+}
+
+#table_fields_check_boxes{
+   display: none;
 }
